# NTUST-Computer-Vision

./: .gitignore  README.md  homework01.cpp  homework02.cpp  mid_term.cpp
01-Shape-from-Silhouette/: homework01.cpp
02-Homography Translation between Images/: CMakeLists.txt
02-Homography Translation between Images/results/: one-page  document.docx
02-Homography-Translation-between-Images/: README.md
03-Camera-Position-Relative-to-World-Coordination/: CMakeLists.txt  README.md  homework03.cpp  report.docx
04-image-rectification/: CMakeLists.txt  homework01.sln  rectification.cpp  stdafx.cpp
05-3D Reconstruction from  Stereoscopic Images/: homework01.cpp
05-3D-Reconstruction-from-Stereoscopic-Images/: CMakeLists.txt  CalibrationData.txt  homework05.cpp  one-page  document.docx
3D Reconstruction from  Stereoscopic Images/: README.md
Camera Position Relative to World Coordination/: README.md
Camera-Position-Relative-to-World-Coordination/: CalibrationIMG_GroundTruth.max  README.md  coordination_of_camera.txt  homewor03.cpp  homework03.cpp
Homography Translation between Images/: README.md  homework02.cpp
Shape from Silhouette/: CMakeLists.txt  README.md  homework01.cpp
Shape from Silhouette/imgs/: Calibration_result.txt
Shape-from-Silhouette/: homework01.cpp
final_project/: README.md
github/final_project/: final.cpp
homework1/: README.md  homework01.cpp
homework2/: README.md
homework3/: README.md  homework03.cpp
mid-term_project/: README.md
slides/: 矩陣計算筆記.docx
